<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id ="@+id/top"
         android:gravity="center"
         android:baselineAligned="false">
     <FrameLayout
    android:id="@+id/frame"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
   

   >
    
    <Button 
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:id="@+id/cross"
        android:background="@drawable/cross_button"
        android:layout_marginTop="0sp"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="20sp"
        android:text="@string/reject"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="5sp"
        android:alpha="0.8"
        />
      <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="35sp"
    android:layout_marginTop="25sp"
    android:gravity="center"
    android:background="@drawable/gradient_linear"
	android:baselineAligned = "false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/tagline"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

</LinearLayout>  
        
     
    <WebView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/webview"
    android:layout_gravity="center"
    android:background="@drawable/ic_launcher"
    android:clickable="true"
    />

<Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/savebtn"
    android:layout_gravity="bottom|left"
    android:layout_marginLeft="30dp"
    android:text = "@string/save"
    />

<Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/redeem"
    android:layout_gravity="bottom|right"
    android:layout_marginRight="30dp"
    android:text = "@string/redeem"
    />

<Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/reset"
    android:layout_gravity="bottom|center"
    android:layout_marginRight="30dp"
    android:text = "@string/reset"
    />




    
     <ImageView 
    android:layout_width="380dp"
    android:layout_height="180dp"
    android:id="@+id/imView"
    android:layout_gravity="center"
    android:background="@drawable/google_plus"
     android:contentDescription="@string/logo"
   
     
    />

<Button 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/savebtn2"
    android:layout_gravity="bottom|center"
    
    android:text = "@string/save"
    
      
    />


    
    
    
   

    </FrameLayout>
    </RelativeLayout>
